Alkimi Prebid Server Adapter test. Fixes after review